search identifiers update + eDelivery update